tests/errors/literals/i32-overflow.fn
---
Description: Bare literal exceeds i32 maximum
Expected: FN3200
---

type Program
{
    static fn Main -> i32
    {
        var v = 2147483648
        return 0
    }
}
